# ntrp

./: .env.example  README.md  pyproject.toml  release
.github/workflows/: ci-cli.yml  publish-cli.yml  publish.yml
docs/: configuration.mdx  docs.json  index.mdx  quickstart.mdx
docs/api-reference/: authentication.mdx  automations.mdx  chat.mdx  config.mdx  introduction.mdx  memory.mdx  sessions.mdx  streaming.mdx
docs/guides/: automations.mdx  memory.mdx  skills.mdx  tools.mdx  tui.mdx
docs/integrations/: browser.mdx  calendar.mdx  gmail.mdx  models.mdx  obsidian.mdx
docs/internal/: memory.md  setup.md
ntrp/: channel.py  cli.py  config.py  constants.py
ntrp-ui/: package.json
ntrp-ui/src/: App.tsx  index.tsx  types.ts
ntrp-ui/src/api/: chat.ts  client.ts  config.ts  fetch.ts  mcp.ts  providers.ts  sessions.ts
ntrp-ui/src/components/: Markdown.tsx  ProviderOnboarding.tsx  Sidebar.tsx  index.ts
ntrp-ui/src/components/chat/: AutocompleteList.tsx  InputArea.tsx  InputFooter.tsx
ntrp-ui/src/components/dialogs/: ApprovalDialog.tsx  ModelPicker.tsx
ntrp-ui/src/components/sidebar/: AutomationsSection.tsx  SessionsList.tsx  Sidebar.tsx  SourcesSection.tsx
ntrp-ui/src/components/ui/: Dialog.tsx  SelectList.tsx
ntrp-ui/src/components/viewers/: index.ts
ntrp-ui/src/hooks/: keyUtils.ts  useAutocomplete.ts  useAutomations.ts  useCommands.ts  useMessageQueue.ts  useNotifierForm.ts  useNotifiers.ts  useSettings.ts  useSettingsKeypress.ts  useSettingsState.ts  useSidebar.ts  useSkills.ts  useStreaming.ts
ntrp-ui/src/hooks/settings/: index.ts  useAgentSettings.ts  useApiKeys.ts  useConnections.ts  useContextSettings.ts  useCredentialSection.ts  useDirectives.ts  useInterfaceSettings.ts  useLimits.ts  useMCPServers.ts  (+4 more)
ntrp-ui/src/lib/: clipboard.ts  commands.ts  constants.ts  history.ts  image-preview.ts
ntrp/automation/: models.py  prompts.py  scheduler.py  service.py  store.py
ntrp/context/: compression.py  prompts.py  store.py
ntrp/core/: agent.py  prompts.py
ntrp/events/: sse.py  triggers.py
ntrp/llm/: anthropic.py  base.py  claude_oauth.py  gemini.py  models.py  openai.py  router.py  utils.py
ntrp/mcp/: manager.py  models.py  oauth.py  session.py  tool.py
ntrp/memory/: chat_extraction.py  consolidation.py  dreams.py  extraction.py  fact_merge.py  observation_merge.py  prompts.py  temporal.py
ntrp/monitor/: calendar.py  gmail.py  service.py  store.py
ntrp/notifiers/: service.py
ntrp/operator/: runner.py
ntrp/server/: app.py  bus.py  dashboard.py  runtime.py  schemas.py  sources.py  state.py  stream.py
ntrp/server/routers/: automation.py  gmail.py  mcp.py  session.py  webhooks.py
ntrp/services/: chat.py  config.py  lifecycle.py  session.py
ntrp/skills/: tool.py
ntrp/sources/: base.py  browser.py  ddgs.py  exa.py  obsidian.py  registry.py
ntrp/sources/google/: auth.py  calendar.py  gmail.py
ntrp/tools/: automation.py  bash.py  discover.py  executor.py  explore.py  specs.py  web_fetch.py
ntrp/tools/core/: context.py
skills/add-tool/: SKILL.md
skills/add-tool/assets/: scaffold.py
skills/add-tool/scripts/: scaffold.sh
(+38 files in other folders)
